--- a/webapp/app/views/layouts/single_page_app.html.erb
+++ b/webapp/app/views/layouts/single_page_app.html.erb
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html ng-app>
+<html>
 <head>
   <title>DailyGoal</title>
+
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+  <%= stylesheet_link_tag    "angular-ui", media: "all", "data-turbolinks-track" => true %>
+
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "angular" %>
+  <%= javascript_include_tag "angular-ui" %>
+  <%= javascript_include_tag "angular-resource" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
