--- a/webapp/app/views/tasks/index.html.slim
+++ b/webapp/app/views/tasks/index.html.slim
@@ -13,7 +13,7 @@ table
     - @tasks.each do |task|
       tr
         td= task.name
-        td= task.role.name
+        td= task.role.try :name
         td= link_to 'Show', task
         td= link_to 'Edit', edit_task_path(task)
         td= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' }
