--- a/webapp/app/views/tasks/show.html.slim
+++ b/webapp/app/views/tasks/show.html.slim
@@ -1,10 +1,12 @@
 p#notice= notice
 
 h1= @task.name
+h2
+  | 角色:
+  = @task.role.try :name
 
-strong 角色:
-= @task.role.name
+= task_in_calendar_view( @task )
 
-.actions
-  = link_to 'Edit', edit_task_path(@task) 
-  = link_to 'Back', tasks_path
+.actions.btn-group
+  = link_to 'Edit', edit_task_path(@task), :class => 'btn btn-primary'
+  = link_to 'Back', tasks_path, :class => 'btn'
