add calendar in ajax view

--- a/webapp/app/assets/templates/task-detail.html
+++ b/webapp/app/assets/templates/task-detail.html
@@ -1,2 +1,7 @@
 <h1>{{task.name}}</h1>
-<a href="#/">back</a>
+
+<div class="ui-calendar" data-task-id="{{task.id}}" data-reviews-uri="{{task.reviewsUri}}"></div>
+<script>
+</script>
+
+<a href="#/" class="btn">back</a>
