--- a/webapp/app/assets/templates/task-list.html
+++ b/webapp/app/assets/templates/task-list.html
@@ -3,14 +3,14 @@
 
     <ul class="tasks" ui-sortable="sortableOptions">
       <li class="task" id="task_{{task.id}}" ng-repeat="task in tasks">
-          <a href="#task/{{task.id}}">{{task.name}}</span>
+          <a href="#task/{{task.id}}">{{task.name}}</a>
       </li>
     </ul>
 
     <form ng-submit="addTask()">
       <input type="text" ng-model="taskName"  size="30"
-             placeholder="add new task here">
-      <input class="btn-primary" type="submit" value="add">
+             placeholder="add new task here" />
+      <input class="btn-primary" type="submit" value="add" />
     </form>
 
 </div>
