--- a/webapp/app/assets/templates/task-detail.html
+++ b/webapp/app/assets/templates/task-detail.html
@@ -11,3 +11,23 @@
 <div class="form-actions">
     <a href="#/" class="btn">back</a>
 </div>
+
+<!-- Modal -->
+<div id="edit-modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h3 id="myModalLabel">{{review.date}}</h3>
+  </div>
+  <div class="modal-body">
+    <form>
+      <label>
+        <input type="checkbox" ng-model="review.done"/>
+        已完成
+      </label>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+    <button class="btn btn-primary">Save changes</button>
+  </div>
+</div>
