user can update review done or not in task detail view (ajax)

--- a/webapp/app/assets/javascripts/tasks.js.coffee.erb
+++ b/webapp/app/assets/javascripts/tasks.js.coffee.erb
@@ -1,4 +1,4 @@
-angular.module( 'task', ['ngResource', 'tasksServices', 'ui'] )
+angular.module( 'task', ['ngResource', 'tasksServices', 'dailyReviewsServices', 'ui'] )
   .config ($routeProvider) ->
     $routeProvider
       .when( '/', {
