--- a/webapp/app/views/home/index.html.erb
+++ b/webapp/app/views/home/index.html.erb
@@ -1,4 +1,5 @@
 <%= javascript_include_tag 'angular/services/tasks' %>
+<%= javascript_include_tag 'angular/services/daily_reviews' %>
 <%= javascript_include_tag 'angular/controllers/task-list' %>
 <%= javascript_include_tag 'angular/controllers/task-detail' %>
 
