--- a/webapp/app/assets/stylesheets/application.css.scss
+++ b/webapp/app/assets/stylesheets/application.css.scss
@@ -37,7 +37,7 @@ table.calendar {
     }
 
     &.done {
-      background-color: #ff7300;
+      background-color: #468847;
       &:hover {
         background-color: #FF9742;
       }
