write less codes

--- a/webapp/app/assets/templates/task-detail.html
+++ b/webapp/app/assets/templates/task-detail.html
@@ -24,7 +24,7 @@
     <h3 id="myModalLabel">"{{task.name}}" on {{review.date}}</h3>
   </div>
   <div class="modal-body">
-    <form>
+    <form ng-submit="updateReview()">
       <fieldset>
           <label class="checkbox"> <input type="checkbox" ng-model="review.done"/> done </label>
           <input type="text" ng-model="review.msg" placeholder="say something~" class="input-block-level" />
@@ -33,6 +33,6 @@
   </div>
   <div class="modal-footer">
     <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-    <button class="btn btn-primary btn-save">Save</button>
+    <button class="btn btn-primary btn-save" ng-click="updateReview()">Save</button>
   </div>
 </div>
