--- a/webapp/app/views/home/index.html.erb
+++ b/webapp/app/views/home/index.html.erb
@@ -1,7 +1,10 @@
 <%= javascript_include_tag 'angular/services/tasks' %>
 <%= javascript_include_tag 'angular/services/daily_reviews' %>
+<%= javascript_include_tag 'angular/services/roles' %>
+
 <%= javascript_include_tag 'angular/controllers/task-list' %>
 <%= javascript_include_tag 'angular/controllers/task-detail' %>
+<%= javascript_include_tag 'angular/controllers/new-task' %>
 
 <%= javascript_include_tag 'tasks' %>
 
