can create new daily_reviews from ajax view

--- a/webapp/app/assets/stylesheets/application.css.scss
+++ b/webapp/app/assets/stylesheets/application.css.scss
@@ -37,21 +37,27 @@ table.calendar {
       background-color: #ccc;
     }
 
-    &.beginning {
-      color: #FF7300;
-    }
-
-    &.done {
-      background-color: #468847;
-      color: #fff;
-      &:hover {
-        background-color: #FF9742;
-      }
-    }
-
-    &.undone {
+    &.valid {
       background-color: #ccc;
+
+      &.beginning {
+        color: #FF7300;
+      }
+
+      &.done {
+        background-color: #468847;
+        color: #fff;
+        &:hover {
+          background-color: #FF9742;
+        }
+      }
+
+      &.undone {
+        background-color: #ccc;
+      }
+
     }
+
   }
 
 }
