--- a/webapp/app/assets/templates/task-detail.html
+++ b/webapp/app/assets/templates/task-detail.html
@@ -26,7 +26,10 @@
 <div id="edit-modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3 id="myModalLabel">"{{task.name}}" on {{review.date}}</h3>
+    <h3 id="myModalLabel">
+        {{task.name}} 
+        <small>on {{review.date}}</small>
+    </h3>
   </div>
   <div class="modal-body">
     <form ng-submit="updateReview()">
