--- a/webapp/app/assets/templates/task-list.html
+++ b/webapp/app/assets/templates/task-list.html
@@ -1,16 +1,28 @@
 <div ng-controller="TaskListController">
     <div class="row">
         <h3>You have {{tasks.length}} tasks
-        <a href="#tasks/new" class="btn" ng-click="adding=true">create more</a>
+            <a href="#tasks/new" class="btn" ng-click="adding=true">create more</a>
         </h3>
     </div>
 
+    <div ng-repeat="(role, tasks) in groupedTasks">
+        <div class="row">
+            <ul class="tasks nav nav-tabs nav-stacked span6 clearfix" ui-sortable="sortableOptions">
+                <li class="role active">
+                    <a href="#" ng-click="return(false)">
+                        {{ tasks.length }} as {{role}}
+                    </a>
+                </li>
+                <li class="task" id="task_{{task.id}}" ng-repeat="task in tasks">
+                <a href="#task/{{task.id}}">{{task.name}}</a>
+                </li>
+            </ul>
+
+        </div>
+
+    </div>
+
     <div class="row">
-        <ul class="tasks nav nav-tabs nav-stacked span6 clearfix" ui-sortable="sortableOptions">
-          <li class="task" id="task_{{task.id}}" ng-repeat="task in tasks">
-              <a href="#task/{{task.id}}">{{task.name}}</a>
-          </li>
-        </ul>
     </div>
 
 </div>
