no sorting in list

--- a/webapp/app/assets/templates/task-list.html
+++ b/webapp/app/assets/templates/task-list.html
@@ -7,7 +7,7 @@
 
     <div ng-repeat="(role, tasks) in groupedTasks">
         <div class="row">
-            <ul class="tasks nav nav-tabs nav-stacked span6 clearfix" ui-sortable="sortableOptions">
+            <ul class="tasks nav nav-tabs nav-stacked span6 clearfix">
                 <li class="role active">
                     <a href="#" ng-click="return(false)">
                         {{ tasks.length }} as {{role}}
