remove relative_to column from roles

--- a/webapp/app/assets/templates/new-task.html
+++ b/webapp/app/assets/templates/new-task.html
@@ -6,7 +6,7 @@
     <div class="control-group">
         <label class="control-label">Role</label>
         <div class="controls">
-            <select required ng-model="role" ng-options="role.display_name for role in roles">
+            <select required ng-model="role" ng-options="role.name for role in roles">
                 <option value="">--choose a role--</option>
             </select>
         </div>
