--- a/webapp/app/views/layouts/single_page_app.html.slim
+++ b/webapp/app/views/layouts/single_page_app.html.slim
@@ -15,7 +15,12 @@ html
   body
     .navbar.navbar-static-top
       .navbar-inner
-        a.brand( href="#" ) daily goal
+        a.brand( href="#" ) DAILY GOAL
+        ul.nav
+          li
+            a(href="/#/roles") roles
+          li
+            a(href="/#/tasks") tasks
 
     .container
       = yield 
