--- a/webapp/app/assets/templates/task-list.html
+++ b/webapp/app/assets/templates/task-list.html
@@ -9,7 +9,7 @@
         <div class="row">
             <ul class="tasks nav nav-tabs nav-stacked span6 clearfix">
                 <li class="role active">
-                    <a href="#" class="info" ng-click="return(false)">
+                    <a href="#" class="info" prevent-default>
                         {{ tasks.length }} as {{role}}
                     </a>
                 </li>
