--- a/webapp/app/views/layouts/single_page_app.html.slim
+++ b/webapp/app/views/layouts/single_page_app.html.slim
@@ -9,6 +9,7 @@ html
     = javascript_include_tag "angular" 
     = javascript_include_tag "angular-ui" 
     = javascript_include_tag "angular-resource" 
+    = javascript_include_tag "angular-prevent-default" 
 
     = csrf_meta_tags 
 
