--- a/webapp/app/views/home/index.html.erb
+++ b/webapp/app/views/home/index.html.erb
@@ -6,6 +6,7 @@
 <%= javascript_include_tag 'angular/controllers/task-detail' %>
 <%= javascript_include_tag 'angular/controllers/new-task' %>
 <%= javascript_include_tag 'angular/controllers/roles' %>
+<%= javascript_include_tag 'angular/controllers/check' %>
 
 <%= javascript_include_tag 'tasks' %>
 
