add wizzard page. show wizzard page if roles are blank

--- a/webapp/app/assets/javascripts/tasks.js.coffee.erb
+++ b/webapp/app/assets/javascripts/tasks.js.coffee.erb
@@ -1,3 +1,7 @@
+#= require angular
+#= require angular-ui
+#= require_tree ./angular
+
 angular.module( 'task', [
   'ngResource',
   'tasksServices',
@@ -9,8 +13,8 @@ angular.module( 'task', [
   .config ($routeProvider) ->
     $routeProvider
       .when( '/', {
-        controller: CheckController,
-        templateUrl: '<%= asset_path "check.html" %>'
+        controller: HomeController,
+        templateUrl: '<%= asset_path "home.html" %>'
       })
       .when( '/roles', {
         controller: RolesController,
