add role wizzard

--- a/webapp/app/assets/javascripts/tasks.js.coffee.erb
+++ b/webapp/app/assets/javascripts/tasks.js.coffee.erb
@@ -20,6 +20,10 @@ angular.module( 'task', [
         controller: RolesController,
         templateUrl: '<%= asset_path "roles.html" %>'
       })
+      .when( '/roles/new', {
+        controller: NewRoleController,
+        templateUrl: '<%= asset_path "new-role.html" %>'
+      })
       .when( '/tasks', {
         controller: TaskListController,
         templateUrl: '<%= asset_path "task-list.html" %>'
