--- a/webapp/app/assets/templates/wizzard.html
+++ b/webapp/app/assets/templates/wizzard.html
@@ -1,1 +1,6 @@
-<h1>wizzard</h1>
+<div class="hero-unit">
+    <h1>Welcome!</h1>
+    <p>DailyGoal helps you get goals more reachable daily</p>
+    <a class="btn btn-primary btn-large" href="#/roles/new">Start now!</a>
+</div>
+
